# uv_mwe_mypackage1

./: pyproject.toml
